# superteam-academy

./: .env.example  .gcloudignore  .gitignore  .prettierignore  .vercelignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
apps/build-server/: .dockerignore  .env.example  .gcloudignore  Cargo.toml  Dockerfile
apps/build-server/deploy/: cloudbuild.yaml  deploy.sh  setup-gcp.sh
apps/build-server/programs/: Cargo.toml
apps/build-server/programs/default/src/: lib.rs
apps/build-server/src/: build.rs  cache.rs  cleanup.rs  config.rs  error.rs  main.rs  metrics.rs
apps/build-server/src/middlewares/: auth.rs  logging.rs  mod.rs  request_id.rs
apps/build-server/src/routes/: build.rs  deploy.rs  health.rs  metrics.rs  mod.rs
apps/build-server/tests/: integration_test.rs
apps/build-server/tests/fixtures/: anchor_counter.rs  hello_world.rs
apps/web/: .env.example  .eslintrc.json  next.config.mjs  package.json  sanity.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: ADMIN.md  ARCHITECTURE.md  CMS_GUIDE.md  CUSTOMIZATION.md  DEPLOY-PROGRAM.md  DEPLOYMENT.md  FRONTEND_ARCHITECTURE.md  design-system.html
docs/plans/: 2026-02-18-celebration-popups-design.md  2026-02-18-celebration-popups-plan.md  2026-02-22-helius-webhook-migration-design.md  2026-02-22-helius-webhook-migration-plan.md
onchain-academy/: Anchor.toml  package.json
sanity/: package.json  sanity.cli.ts  sanity.config.ts  tsconfig.json
scripts/: .gitignore  init-program.ts  setup-devnet.ts
supabase/: schema.sql
(+254 files in other folders)
