[package]
name = "solarium-build-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "limit",
    "request-id",
    "util",
    "set-header",
] }
tower_governor = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
regex = "1"
subtle = "2"
parking_lot = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
