[package]
name = "solarium-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
# Anchor 0.32.1 re-exports solana-program — no direct dep needed
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

# Serialization (Anchor 0.32 uses borsh 0.10 internally)
borsh = "0.10.3"

# Pin blake3 < 1.8 — edition2024 not supported by platform-tools Cargo 1.79
blake3 = ">=1.3, <1.8"
